Fix container overflow (images were causing parent to grow beyond view)

--- a/themes/hugobricks/static/css/base.css
+++ b/themes/hugobricks/static/css/base.css
@@ -15,7 +15,7 @@ html {font-size: clamp(18px, 2vw, 20px); line-height: 1.7; height: 100%; scroll-
 body {font-size: 1rem; background: var(--light);}
 .innerbody {margin: 0 auto; background: white; }
 .innerbody, .innerbody header {max-width: 100%;}
-.container {margin: 0 auto; max-width: 84rem; padding: 0 clamp(1rem,4vw,3rem);}
+.container {margin: 0 auto; max-width: 84rem; padding: 0 clamp(1rem,4vw,3rem); overflow:hidden; }
 img, figure, video, audio {max-width: 100%; display: block;}
 a {color: var(--textMedium);}
 h1, h2 {line-height: 1.1; font-size: 2.6rem; color: var(--textDark);}
